--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,6 @@
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -16,6 +15,13 @@
   align-items: center;
 }
 
-.main .title {
+.title {
   color: var(--text-color);
+}
+
+.canvas {
+  width: 100vw;
+  stroke-width: 0.75%;
+  stroke: var(--text-color);
+  cursor: pointer;
 }
