Set fixed canvas size

--- a/components/GameCanvas.module.css
+++ b/components/GameCanvas.module.css
@@ -1,4 +1,6 @@
 .canvas {
-  width: 100vw;
+  min-width: calc(100vmin - 64px);
   cursor: pointer;
+  border: 2px solid var(--text-color);
+  border-radius: 16px;
 }
